--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-ajax": "^5.0.0",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
+    "ember-cli-autoprefixer": "^0.8.1",
     "ember-cli-babel": "^7.7.3",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
@@ -35,6 +36,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-css-transitions": "^0.1.16",
     "ember-data": "~3.10.0",
     "ember-decorators": "^6.0.0",
     "ember-export-application-global": "^2.0.0",
