--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-pagination": "^3.1.4",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-tailwind": "^0.7.0",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-css-transitions": "^0.1.16",
